--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@ div {
 }
 
 div div {
-    background: #A4CA39;
+    background-color: #A4CA39;
     position: relative;
 }
 
 .android {
     height: 404px;
     width: 334px;
-    margin: 0 auto;
+    margin: 100px auto;
 }
 
-. head {
+.head {
     width: 220px;
     height: 100px;
     border-radius: 110px 110px 0 0;
@@ -24,7 +24,7 @@ div div {
 
 /* eyes */
 .l_eye, .r_eye {
-    backrgound: #fff;
+    background-color: #fff;
     width: 20px;
     height: 20px;
     position: absolute;
@@ -45,5 +45,20 @@ div div {
     width: 6px;
     height: 50px;
     position: absolute; 
-    top:
+    top: -34px;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+}
+.l_ant {
+    left:  50px;
+    transform: rotate(-30deg);
+    -moz-transform: rotate(-30deg);
+    -webkit-transform: rotate(-30deg);
+}
+.r_ant {
+    right:  50px;
+    transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
 }
