--- a/style.css
+++ b/style.css
@@ -62,3 +62,12 @@ div div {
     -moz-transform: rotate(30deg);
     -webkit-transform: rotate(30deg);
 }
+
+.body {
+  width: 220px;
+  height: 184px;
+  top: 40px;
+  border-radius: 0 0 25px 25px; 
+  -moz-border-radius: 0 0 25px 25px; 
+  -webkit-border-radius: 0 0 25px 25px; 
+}
